--- a/loginpage2.html
+++ b/loginpage2.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> Latest Marble | Rajsamand | Rajasthan | India </title>
+<title> Latest Marble | Rajsamand | Rajasthan | India </title
+<link rel="icon" type="image/x-icon" href="C:\Users\Lakshit Paliwal\Desktop\Marble\img\iconlogo.png"  >
+
 <link rel="stylesheet" href="bootstrap.css" >
 <link rel="stylesheet" href="css/mstyle.css" >
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
