--- a/homepage.html
+++ b/homepage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html  oncontextmenu="return false"><!--for disable  right click-->
 <head>
 <title> Latest Marble | Rajsamand | Rajasthan | India </title>
 <link rel="icon" type="image/x-icon" href="C:\Users\Lakshit Paliwal\Desktop\Marble\img\iconlogo.png"  >
@@ -18,6 +18,26 @@
 <!--<meta http-equiv="refresh" content ="2">-->
 </head>
 
+  document.onkeydown = function(e) {
+    if(e.keyCode == 123) {
+     return false;
+    }
+    if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)){
+     return false;
+    }
+    if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)){
+     return false;
+    }
+    if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)){
+     return false;
+    }
+
+    if(e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)){
+     return false;
+    }      
+	}
+</script>
+<body  oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;"> <!--for short cut keys like ctrl -->
 <nav class=".col-1">
 <ul class="navul">
   <li class="navli"><a class="navactive nava" href="homepage.html">Home</a></li>&nbsp;&nbsp;
@@ -31,7 +51,6 @@
 </nav>
 
 <div id="gotop"></div>
-<body>
 
 <h1 align="center" class="mainh1" name="home" title="Latest Marble">Latest Marble <br></h1>
 <h2 class="mainh3">THE WHISPERS OF SOPHISTICATION</h2>
