--- a/homepage.html
+++ b/homepage.html
@@ -17,7 +17,7 @@
 
 <!--<meta http-equiv="refresh" content ="2">-->
 </head>
-
+<script>
   document.onkeydown = function(e) {
     if(e.keyCode == 123) {
      return false;
