--- a/attpage.html
+++ b/attpage.html
@@ -19,7 +19,7 @@
 <nav class=".col-1">
 
 <ul class="  navul">
-  <li class="navli"><a class="nava" href="homepage.html">Home</a></li>&nbsp;|&nbsp;
+  <li class="navli"><a class="nava" href="index.html">Home</a></li>&nbsp;|&nbsp;
   <li class="navli"><a class="nava" href="">News</a></li>
   <li class="navli"><a class="nava" href="#contactdiv">Contact</a></li>
   <li class="navli"><a class="nava" href="">Products</a></li>
