--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body  oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;"> <!--for short cut keys like ctrl -->
 <nav class=".col-1">
 <ul class="navul">
-  <li class="navli"><a class="navactive nava" href="homepage.html">Home</a></li>&nbsp;&nbsp;
+  <li class="navli"><a class="navactive nava" href="index.html">Home</a></li>&nbsp;&nbsp;
   <li class="navli"><a class="nava" href="">News</a></li>
   <li class="navli"><a class="nava" href="#contactdiv">Contact</a></li>
   <li class="navli"><a class="nava" href="">Products</a></li>
