--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html  oncontextmenu="return false"><!--for disable  right click-->
+<html oncontextmenu="return false">
 <head>
 <title> Latest Marble | Rajsamand | Rajasthan | India </title>
 <link rel="icon" type="image/x-icon" href="C:\Users\Lakshit Paliwal\Desktop\Marble\img\iconlogo.png"  >
-
 <link rel="stylesheet" href="bootstrap.css" >
 <link rel="stylesheet" href="css\mstyle.css" >
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"><!-- link for social media tag-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- link for social media tag-->
 <!-- <link rel="stylesheet" type="text/css"  href="css/bootstrap.css"> -->
 
 <meta charset="utf-8">
@@ -17,7 +17,8 @@
 
 <!--<meta http-equiv="refresh" content ="2">-->
 </head>
-<script type="text/javascript">
+<!-- <script>
+
   document.onkeydown = function(e) {
     if(e.keyCode == 123) {
      return false;
@@ -35,9 +36,12 @@
     if(e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)){
      return false;
     }      
-	}
-</script>
-<body  oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;"> <!--for short cut keys like ctrl -->
+ }
+
+</script> -->
+<body  oncontextmenu="return false" onkeydown="return false;" onmousedown="return false;">
+
+
 <nav class=".col-1">
 <ul class="navul">
   <li class="navli"><a class="navactive nava" href="index.html">Home</a></li>&nbsp;&nbsp;
