--- a/homepage.html
+++ b/homepage.html
@@ -195,7 +195,7 @@ Mystery White Marble</p></p>
 <!-- Step 1) Mockups screens how your website looks each and every page step 2) create flow chats based on the screens you have designed -->
 <div  style="line-height: 25px;">
 	<p>Latest Stone Marbles Pvt. Ltd &nbsp;	  Rajsamand  | INDIA | 012345</p>
-      <p>abc@gmail.com</p>
+      <p>lakshitpaliwal27@gmail.com</p>
       <p title="Personal Contact Number">+91 01 23 45 67 89 </p>
       <p title="For Business ">+91 01 23 45 67 89</p>
     </div>
