--- a/index.html
+++ b/index.html
@@ -198,11 +198,12 @@ Mystery White Marble</p></p>
     </div>
 <!-- Step 1) Mockups screens how your website looks each and every page step 2) create flow chats based on the screens you have designed -->
 <div  style="line-height: 25px;">
-	<p>Latest Stone Marbles Pvt. Ltd &nbsp;	  Rajsamand  | INDIA | 012345</p>
-      <p>abc@gmail.com</p>
-      <p title="Personal Contact Number">+91 01 23 45 67 89 </p>
-      <p title="For Business ">+91 01 23 45 67 89</p>
-    </div>
+	<p>Latest Stone Marbles Pvt. Ltd &nbsp;	    | INDIA </p>
+      <p>lakshitpaliwal27@gmail.com</p>
+      <p title="Personal Contact Number">+91 94 62 62 8513 </p>
+      <p title="For Business ">+91 9501134828</p><br>
+      <p> Website design by LAKSHIT</p>
+	</div>
 </div>
 
 <div class="linkfooter">
@@ -210,7 +211,7 @@ Mystery White Marble</p></p>
   <a href="https://twitter.com/Lakshit_paliwal" class="fa fa-google" title="Google+"></a>
   <a href="https://twitter.com/Lakshit_paliwal" class="fa fa-twitter" title="Twitter"></a>
   <a href="#" class="fa fa-github" title="GitHub"></a>
-  <a href="https://www.instagram.com/lakshit_paliwal" class="fa fa-instagram"  title="Instagram"></a>
+  <a href="https://www.instagram.com/lakshit_0" class="fa fa-instagram"  title="Instagram"></a>
   <a href="https://www.linkedin.com/in/lakshit-paliwal-14885015a" class="fa fa-linkedin" title="LinkedIn"></a>
 <div  class="bottomtag">
  
