--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ Mystery White Marble</p></p>
 <!-- Step 1) Mockups screens how your website looks each and every page step 2) create flow chats based on the screens you have designed -->
 <div  style="line-height: 25px;">
 	<p>Latest Stone Marbles Pvt. Ltd &nbsp;	    | INDIA </p>
-      <p>lakshitpaliwal27@gmail.com</p>
+      <p>notvalidemail@gmail.com</p>
       <p title="Personal Contact Number">+91 94 62 62 8513 </p>
       <p title="For Business ">+91 9501134828</p><br>
       <p> Website design by LAKSHIT</p>
