--- a/feedback.html
+++ b/feedback.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title> Latest Marble | Rajsamand | Rajasthan | India </title>
-<link rel="icon" type="image/x-icon" href="C:\Users\Lakshit Paliwal\Desktop\Marble\img\iconlogo.png"  >
+<link rel="icon" type="image/x-icon" href="images\iconlogo.png"   >
 
 <link rel="stylesheet" href="bootstrap.css" >
 <link rel="stylesheet" href="css/mstyle.css" >
