--- a/index.html
+++ b/index.html
@@ -167,27 +167,27 @@ World class marbles . Revolutiners in marble mining . Pleasing quality of servic
   <div class="column">
     <h2>Types Of Marble</h2>
     <p> Carrara Marble. This popular white marble has a clean look with its subtle gray hues. ...<br>
-Calacatta Marble. ...<br>
-Statuario Marble. ...<br>
-Thassos Marble. ...<br>
+Calacatta Marble<br>
+Statuario Marble<br>
+Thassos Marble<br>
 Mystery White Marble</p>
   </div>
   
   <div class="column">
     <h2>Second Type Marble</h2>
     Carrara Marble. This popular white marble has a clean look with its subtle gray hues. ...<br>
-Calacatta Marble. ...<br>
-Statuario Marble. ...<br>
-Thassos Marble. ...<br>
+Calacatta Marble<br>
+Statuario Marble<br>
+Thassos Marble<br>
 Mystery White Marble</p></p>
   </div>
   
   <div class="column">
     <h2>Third Type Marble</h2>
     <p>Carrara Marble. This popular white marble has a clean look with its subtle gray hues. ...<br>
-Calacatta Marble. ...<br>
-Statuario Marble. ...<br>
-Thassos Marble. ...<br>
+Calacatta Marble<br>
+Statuario Marble<br>
+Thassos Marble<br>
 Mystery White Marble</p></p>
   </div>
 </div>
@@ -199,7 +199,7 @@ Mystery White Marble</p></p>
 <!-- Step 1) Mockups screens how your website looks each and every page step 2) create flow chats based on the screens you have designed -->
 <div  style="line-height: 25px;">
 	<p>Latest Stone Marbles Pvt. Ltd &nbsp;	    | INDIA </p>
-      <p>notvalidemail@gmail.com</p>
+      <p>L************l@gmail.com</p>
       <p title="Personal Contact Number">+91 94 62 62 8513 </p>
       <p title="For Business ">+91 9501134828</p><br>
       <p> Website design by LAKSHIT</p>
@@ -208,11 +208,11 @@ Mystery White Marble</p></p>
 
 <div class="linkfooter">
   <a href="https://www.facebook.com/LAKSHIT.PALIWAL.27" class="fa fa-facebook" title="Facebook"></a>
-  <a href="https://twitter.com/Lakshit_paliwal" class="fa fa-google" title="Google+"></a>
+  <a href="Lakshitpaliwal27@gmail.com" class="fa fa-google" title="Google+"></a>
   <a href="https://twitter.com/Lakshit_paliwal" class="fa fa-twitter" title="Twitter"></a>
-  <a href="#" class="fa fa-github" title="GitHub"></a>
+  <a href="https://github.com/LakshitPaliwal" class="fa fa-github" title="GitHub"></a>
   <a href="https://www.instagram.com/lakshit_0" class="fa fa-instagram"  title="Instagram"></a>
-  <a href="https://www.linkedin.com/in/lakshit-paliwal-14885015a" class="fa fa-linkedin" title="LinkedIn"></a>
+  <a href="https://www.linkedin.com/in/lakshitpaliwal" class="fa fa-linkedin" title="LinkedIn"></a>
 <div  class="bottomtag">
  
 <a href="#gotop">
@@ -220,8 +220,6 @@ Mystery White Marble</p></p>
 &#8682;&nbsp;&nbsp;&nbsp; GO ON TOP&nbsp;&nbsp;&nbsp; &#8682;</button>
 </a>
 </div>
-<!-- 	 https://www.w3schools.com/code/tryit.asp?filename=GBFUOHPXN20Z 
- 	 https://www.w3schools.com/code/tryit.asp?filename=GBFUQBGH1O2F
--->
+
 </body>
 </html>
